--- a/stat_consulting_team_11.ipynb
+++ b/stat_consulting_team_11.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a9003e",
+   "id": "a97de2f4",
    "metadata": {},
    "source": [
     "# Part 1: get the data"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f8110ac",
+   "id": "e14e8da6",
    "metadata": {},
    "source": [
     "### Add next latitude  & longitude"
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879cb038",
+   "id": "a7c9d194",
    "metadata": {},
    "source": [
     "### Add extra columns"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2d8fc7b",
+   "id": "702c6860",
    "metadata": {},
    "source": [
     "- code is the 5 digit code coming folder name\n",
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42288e84",
+   "id": "1ea6f87e",
    "metadata": {},
    "source": [
     "### Take last and first codes starting with 1 or 0 in each folder"
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82108960",
+   "id": "53c927f8",
    "metadata": {},
    "source": [
     "## Join to get routes of first and last files respectively "
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e4615d",
+   "id": "fc246038",
    "metadata": {},
    "source": [
     "### Keep first route as is, if the point does not apear in the last file then `is_not_removed` becomes null"
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3fba5ca",
+   "id": "5913faa0",
    "metadata": {},
    "source": [
     "---"
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a3639c4",
+   "id": "d0e0a3f7",
    "metadata": {},
    "source": [
     "# Part 2: clustering"
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f0b560d",
+   "id": "ed58ba23",
    "metadata": {},
    "source": [
     "### Take 5% of sample to perform clustering on latitude & longitude"
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "959abf7e",
+   "id": "f801baa3",
    "metadata": {},
    "source": [
     "### Take the number of clusters with highest silhouette score which is at $13$"
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d3c8b63",
+   "id": "80d935f3",
    "metadata": {},
    "source": [
     "### Perform clustering on full dataset using $13$ clusters"
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "718ce05b",
+   "id": "4ef494de",
    "metadata": {},
    "source": [
     "### Visualize clusters"
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2372de2e",
+   "id": "489e2265",
    "metadata": {},
    "source": [
     "#### Add clusters column"
@@ -694,6 +694,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65a8aced",
+   "metadata": {},
+   "source": [
+    "### - Resulting table contains $764K$ points from $6.3K$ unique routes. Of all points $11$% were eventually removed.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "8b6b09d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "764115 6302 10.864725859327457\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(final_df.shape[0], \n",
+    "final_df[['folder_name', \"code_digit\"]].drop_duplicates().shape[0],\n",
+    "final_df.query(\"is_removed == 1\").shape[0]/final_df.shape[0]*100)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "1e05995e",
@@ -708,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "045b386f",
+   "id": "f9c8fade",
    "metadata": {},
    "source": [
     "### - Of all points 85.6% have the same time window - ”07:30:00-23:59:00”"
@@ -717,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5852bf52",
+   "id": "306b06f5",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7744f3c8",
+   "id": "f3bdd30f",
    "metadata": {},
    "source": [
     "---"
@@ -895,7 +923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72863a62",
+   "id": "0508b85d",
    "metadata": {},
    "source": [
     "---"
@@ -903,7 +931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9b8d47e",
+   "id": "847d65cf",
    "metadata": {},
    "source": [
     "### - Removed points on average have $1.13$ times more stops than non-removed ones."
@@ -995,7 +1023,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf577471",
+   "id": "55fa23c0",
    "metadata": {},
    "source": [
     "---"
@@ -1003,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f808d39",
+   "id": "c9cf8a3d",
    "metadata": {},
    "source": [
     "### - Cluster 3 has highest concentration of removed points ($16$%)\n",
@@ -1194,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c18b102e",
+   "id": "b32ecc5a",
    "metadata": {},
    "source": [
     "###  Fit two models and compare accuracies"
@@ -1223,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6257c3",
+   "id": "f3172014",
    "metadata": {},
    "source": [
     "### Split test-train"
@@ -1242,7 +1270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21607753",
+   "id": "c0f31a12",
    "metadata": {},
    "source": [
     "### RandomForestClassifier has 92% accuracy"
@@ -1276,7 +1304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87236fad",
+   "id": "2191d5cc",
    "metadata": {},
    "source": [
     "### LogisticRegression has 88% accuracy"
@@ -1311,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ca271bf",
+   "id": "83d1e4a1",
    "metadata": {},
    "source": [
     "---"
@@ -1319,7 +1347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "209bed79",
+   "id": "b813f42b",
    "metadata": {},
    "source": [
     "### Summary of logistic regression results"
