--- a/stat_consulting_team_11.ipynb
+++ b/stat_consulting_team_11.ipynb
@@ -1209,7 +1209,8 @@
     "per_removed_from_neighb = pd.merge(times_visited, times_removed, on=['clusters'])\n",
     "per_removed_from_neighb[\"%_removed\"] = (per_removed_from_neighb[\"times_removed\"]/\n",
     "                                        per_removed_from_neighb[\"times_visited\"]*100)\n",
-    "per_removed_from_neighb.sort_values(\"%_removed\", ascending=ending=False)\n"
+    "\n",
+    "per_removed_from_neighb.sort_values(\"%_removed\", ascending=False)\n"
    ]
   },
   {
@@ -1237,7 +1238,8 @@
    "source": [
     "sample_prop = 0.05\n",
     "sample_size = int(final_df[['request_file_name']].drop_duplicates().shape[0]*sample_prop)\n",
-    "sample_files = final_df[['request_file_name']].drop_duplicates().sample(sample_size, random_state=1)['request_file_name'].values\n",
+    "sample_files = (final_df[['request_file_name']].drop_duplicates()\n",
+    "                                               .sample(sample_size, random_state=1)['request_file_name'].values)\n",
     "\n",
     "training = final_df.query(\"request_file_name in @sample_files\")[['configurationName','distance', \n",
     "                                                                 'number_of_input_taks', 'clusters',\n",
@@ -1391,7 +1393,7 @@
    "source": [
     "X_train = sm.add_constant(X_train)\n",
     "\n",
-    "logit_model=sm.Logit(y_train,X_train).fit()\n",
+    "logit_model=sm.Logit(y_train, X_train).fit()\n",
     "print(logit_model.summary())\n"
    ]
   }
